--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,10 @@
           <%= select :user, :locale, I18n.backend.available_locales.collect {|l| [I18n.t('this_file_language', :locale => l), l.to_s]}, {:selected => I18n.locale.to_s} %>
           <%= javascript_tag do %>
             $('#user_locale').selectmenu({width: 100});
+            if(!$.browser.mozilla) {
+              $('.ui-selectmenu').height(29);
+              $('.ui-selectmenu-status').css('line-height', '1.5em');
+            }
             $('#user_locale').bind('change', function() { window.location = window.location.pathname + "?locale=" + $('#user_locale').val();});
           <% end %>
         <% end %>
