--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -1,7 +1,7 @@
 <html style="background-color: #fff;">
   <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
     <div class="ui-widget-header ui-corner-all" id="header" style="-webkit-border-radius: 4px; overflow: hidden; font-weight: bold; color: #ffffff; border: 1px solid #e78f08; height: 62px; -moz-border-radius: 4px; border-radius: 4px; background: #f6a828;">
-      <a href="http://sadhana.luisperichon.com.ar/" style="color: #ffffff;"><img src='http://sadhana.luisperichon.com.ar/images/logo_62.png' alt='S&aacute;dhana' /></a>
+      <a href="http://sadhana.luisperichon.com.ar/" style="color: #ffffff;"><img src='http://sadhana.luisperichon.com.ar/images/logo_62.png' style='border: 0;' alt='S&aacute;dhana' /></a>
     </div>
 
     <div id="content">
