add practice parts

--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -54,9 +54,24 @@
       <% end %>
     </div>
   </div>
-  <div id='practice_techniques'>
-    <% @practice.practice_techniques.each do |practice_technique| %>
-      <%= render :partial => 'practice_technique', :locals => {:practice_technique => practice_technique} %>
+  <div id="practice_parts">
+    <ul>
+      <li><a href="#part-techniques-1">Old</a> <span class="ui-icon ui-icon-close">Remove Tab</span></li>
+      <% @practice.practice_parts.each do |pp| %>
+        <li><a href="#part-techniques-<%= pp.id %>"><%= pp.part.name %></a> <span class="ui-icon ui-icon-close">Remove Tab</span></li>
+      <%end %>
+      <button id="add_tab">Add Anga</button>
+    </ul>
+
+    <div id='part-techniques-1' class="part-techniques">
+      <% @practice.practice_techniques.each do |practice_technique| %>
+        <%= render :partial => 'practice_technique', :locals => {:practice_technique => practice_technique} %>
+      <% end %>
+    </div>
+
+    <% @practice.practice_parts.each do |pp| %>
+        <div id='part-techniques-<%= pp.id %>' class="part-techniques">
+        </div>
     <% end %>
   </div>
   <div id='created_practice_technique'></div>
@@ -69,11 +84,11 @@
 <%= render :partial => 'shared/edit_practice_technique_dialog' %>
 <%= render :partial => 'shared/confirm_dialog' %>
 <%= render :partial => 'shared/new_event_dialog' %>
+<%= render :partial => 'shared/new_practice_part_dialog' %>
 
 
 <%= javascript_tag do %>
   $(document).ready(function(){
-
     // First, we must tell jStore where to find the HTML file which embeds our flash script.
     // If you move the jStore.swf or jStore.Flash.html files out of their default directories (document root),
     // use this variable to define where to access the .html file. Within the .html file, you can set up the
@@ -130,11 +145,11 @@
     cached_asanas = jQuery.jStore.get('asana');
     cached_techniques_token = jQuery.jStore.get('techniques_token');
     actual_techniques_token = '<%= ENV['TECHNIQUES_TOKEN'] %>';
-    if(cached_techniques_token && actual_techniques_token == cached_techniques_token && cached_asanas) {
+    if( cached_techniques_token && actual_techniques_token == cached_techniques_token && cached_asanas) {
         $('#asana_techniques_viewport').html(cached_asanas);
         Practices.accordion_draggable();
         qs.cache();
-    } else {
+    } else if(null) {
         $.ajax({
           type:'get',
           data: { 'symbol': 'asana' },
@@ -151,6 +166,12 @@
         });
     }
     })});
+
+    $('#add_tab').click(function() {$('#new_practice_part_dialog').dialog('open');});
+    $('#add_tab').button({icons: {secondary: 'ui-icon-circle-plus'}});
+    $('#add_tab').removeClass('ui-corner-all').addClass('ui-corner-top');
+    $('#practice_parts').tabs({tabTemplate: '<li><a href="#{href}">#{label}</a> <span class="ui-icon ui-icon-close">Remove Tab</span></li>'});
+
     // Enable sorting practice techniques
     $('#practice_techniques').sortable(
     {
