--- a/app/views/practice_techniques/_dialog_form.html.erb
+++ b/app/views/practice_techniques/_dialog_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@practice, @practice_technique]) do |f| %>
+<%= form_for([@practice, @practice_part, @practice_technique]) do |f| %>
   <%= f.error_messages %>
 
   <%= render :partial => 'fields', :locals => {:f => f} %>
