add techniques to parts

--- a/app/views/practices/_practice_part.html.erb
+++ b/app/views/practices/_practice_part.html.erb
@@ -20,7 +20,7 @@
       }
     );
 
-    // Enable adding techniques to practice (only ásanas for now)
+    // Enable adding techniques to part (only ásanas for now)
     $("#part-techniques-<%= practice_part.id %>").droppable({
       accept: '.asana',
       drop: function(event, ui) {
