--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -97,11 +97,11 @@
     });
 
     // Resize window to fit
-    ff_diff = $.browser.mozilla ? 5 : 0;
-    $('#practice_editor #practice_techniques').height($(window).height() - $('#practice_data').height() - $('#header').height() - $('#practice_actions').height() - $('#notifications').height() - 75 + ff_diff);
+    ff_diff = $.browser.mozilla ? 2 : 0;
+    $('#practice_editor .part-techniques').height($(window).height() - $('#practice_data').height() - $('#header').height() - $('#practice_actions').height() - $('#notifications').height() - 140 + ff_diff);
     $('#techniques_accordion .techniques-viewport').height($(window).height() - $('#practice_data').height() - $('#header').height() - $('#practice_actions').height() - $('#notifications').height() - 215);
     $(window).resize(function() {
-      $('#practice_editor #practice_techniques').height($(window).height() - $('#practice_data').height() - $('#header').height() - $('#practice_actions').height() - $('#notifications').height() - 75 + ff_diff);
+      $('#practice_editor .part-techniques').height($(window).height() - $('#practice_data').height() - $('#header').height() - $('#practice_actions').height() - $('#notifications').height() - 140 + ff_diff);
       $('#techniques_accordion .techniques-viewport').height($(window).height() - $('#practice_data').height() - $('#header').height() - $('#practice_actions').height() - $('#notifications').height() - 215);
     });
 
