--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -117,15 +117,8 @@
 
 #practice_parts li .ui-icon-close {
     float: left;
-    margin: 0.4em 0.2em 0 0;
+    margin: 0.4em 0 0 0;
     cursor: pointer;
-}
-
-.ui-sortable-helper {
-    height: 30px;
-}
-
-.ui-sortable-helper .ui-icon-close {
 }
 
 #practice_parts .ui-tabs-nav li a {
@@ -144,7 +137,7 @@
 }
 
 #practice_parts button .ui-icon {
-    right: 4px;
+    right: 2px;
     margin-top: -7px;
 }
 
