--- a/app/views/practices/_practice_technique.html.erb
+++ b/app/views/practices/_practice_technique.html.erb
@@ -68,7 +68,7 @@
 
 <%= javascript_tag do %>
   $('#<%= dom_id practice_technique %>').droppable({
-    accept: '.mudra, .manos',
+    accept: '<%= practice_part.part.secondary_technique_types %>',
     drop: function(event, ui) {
       if(ui.draggable.hasClass('ui-draggable')) {
         // associate new practice technique via ajax
