--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -57,7 +57,7 @@
   <div id="practice_parts">
     <ul>
       <% @practice.practice_parts.each do |pp| %>
-        <li part_id="<%= pp.id %>" id="practice_part_<%= pp.id %>"><a href="#part-techniques-<%= pp.id %>"><%= pp.part.name %></a> <span class="ui-icon ui-icon-close">Remove Tab</span></li>
+        <li part_id="<%= pp.id %>" primary_technique_type="<%= pp.part.primary_technique_type %>" secondary_technique_types="<%= pp.part.secondary_technique_types %>" id="practice_part_<%= pp.id %>"><a href="#part-techniques-<%= pp.id %>"><%= pp.part.name %></a> <span class="ui-icon ui-icon-close">Remove Tab</span></li>
       <%end %>
       <button id="add_tab">Add Anga</button>
     </ul>
@@ -133,7 +133,7 @@
     actual_techniques_token = '<%= ENV['TECHNIQUES_TOKEN'] %>';
     if( cached_techniques_token && actual_techniques_token == cached_techniques_token && cached_asanas) {
         $('#asana_techniques_viewport').html(cached_asanas);
-        Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'));
+        Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'), $('.ui-tabs-selected').attr('primary_technique_type'), $('.ui-tabs-selected').attr('secondary_technique_types'));
         qs.cache();
     } else {
         $.ajax({
@@ -146,7 +146,7 @@
             jQuery.jStore.set('techniques_token', actual_techniques_token);
             cached_asanas = data
             $('#asana_techniques_viewport').html(cached_asanas);
-            Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'));
+            Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'), $('.ui-tabs-selected').attr('primary_technique_type'), $('.ui-tabs-selected').attr('secondary_technique_types'));
             qs.cache();
           }
         });
@@ -160,7 +160,7 @@
         tabTemplate: '<li id="new_practice_part"><a href="#{href}">#{label}</a> <span class="ui-icon ui-icon-close">Remove Tab</span></li>',
         panelTemplate: '<div class="part-techniques"></div>',
         select: function(event, ui) {
-          Practices.accordion_draggable('#' + $(ui.panel).attr('id'));
+          Practices.accordion_draggable('#' + $(ui.panel).attr('id'), $(ui.tab).parent().attr('primary_technique_type'), $(ui.tab).parent().attr('secondary_technique_types'));
         },
         show: function(event, ui) {
           $('#' + $(ui.panel).attr('id')).sortable('refresh');
@@ -212,7 +212,7 @@
         cached_techniques = jQuery.jStore.get(technique_type_symbol);
         if(cached_techniques) {
             $('#' + technique_type_symbol + '_techniques_viewport').html(cached_techniques);
-            Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'));
+            Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'), $('.ui-tabs-selected').attr('primary_technique_type'), $('.ui-tabs-selected').attr('secondary_technique_types'));
             qs.cache();
         } else {
             $.ajax({
@@ -224,7 +224,7 @@
                 jQuery.jStore.set(technique_type_symbol, data);
                 cached_techniques = data
                 $('#' + technique_type_symbol + '_techniques_viewport').html(cached_techniques);
-                Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'));
+                Practices.accordion_draggable($('.ui-tabs-selected a').attr('href'), $('.ui-tabs-selected').attr('primary_technique_type'), $('.ui-tabs-selected').attr('secondary_technique_types'));
                 qs.cache();
               }
             });
