--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -2,7 +2,7 @@
   <li>
     <%= link_to t('actions.play'), play_practice_path, :class => 'blue medium awesome' %>
   </li>
-  <li><%= link_to_function t('actions.play_preferences'), "$('#play_preferences_dialog').dialog('open');", :class => 'medium blue awesome' %></li>
+  <li><%= link_to_function t('actions.edit'), "$('#edit_practice_dialog').dialog('open');", :class => 'medium blue awesome' %></li>
   <li><%= link_to t('actions.add_to_calendar'), new_practice_event_path, :class => 'blue medium awesome', :id => "#{dom_id @practice}_add_to_calendar_link" %>
     <% unless current_user.calendar_subscription_check(current_user.subscription.plan) %>
       <% javascript_tag do %>
@@ -21,16 +21,6 @@
 </ul>
 
 <div id='practice_data'>
-  <p>
-    <b><%= Practice.human_attribute_name :name %>:</b><%= field_help t('practice.help.name') %>
-    <%= jeditable_field(:practice, :name) %>
-  </p>
-
-  <p>
-    <b><%= Practice.human_attribute_name :description %>:</b><%= field_help t('practice.help.description') %>
-    <%= jeditable_field(:practice, :description) %>
-  </p>
-
   <p>
     <b><%= Practice.human_attribute_name :total_time %>:</b><%= field_help t('practice.help.total_time') %>
     <span id='practice_time'><%= t('practice.time_format', :minutes =>@practice.total_time / 60, :seconds => @practice.total_time % 60 )%></span>
@@ -69,8 +59,19 @@
   <div id='created_practice_technique'></div>
 </div>
 
-<div id='play_preferences_dialog' title='<%= t('practices.play.play_preferences_dialog.title') %>' style="display:none">
-  <%= render :partial => 'practices/edit_preferences_dialog_form' %>
+<div id='edit_practice_dialog' style="display:none">
+  <ul>
+    <li><a href="#practice_info"><%= t('practices.edit_practice_dialog.info_tab_title') %></a></li>
+    <li><a href="#play_preferences"><%= t('practices.edit_practice_dialog.play_preferences_tab_title') %></a></li>
+    <li id="practice-ui-tab-dialog-close"></li>
+  </ul>
+  <div id="practice_info">
+    <%= render :partial => 'practices/practice_info_dialog_form' %>
+  </div>
+  <div id='play_preferences'>
+    <%= render :partial => 'practices/play_preferences_dialog_form' %>
+  </div>
+
 </div>
 
 <%= render :partial => 'shared/edit_practice_technique_dialog' %>
@@ -100,26 +101,38 @@
     Practices.adjustEditorSize();
 
     // Initialize play preferences dialog
-    $('#play_preferences_dialog').dialog({
-      autoOpen: false,
-      modal: true,
-      buttons: {
-        '<%=t('actions.save')%>': function() {
-          $.ajax({
-            type:'put',
-            dataType: 'script',
-            data: $('#play_preferences_dialog form').serialize(),
-            url: $('#play_preferences_dialog form').attr('action'),
-            success: function() {
-              $('#play_preferences_dialog').dialog('close');
+
+      $('#edit_practice_dialog').tabs();
+      $('#edit_practice_dialog').dialog({autoOpen: false, modal: true, width: 500, buttons: {
+        '<%= t('actions.update') %>': function() {
+            if($('#edit_practice_dialog').tabs('option', 'selected') == 0) {
+              $.ajax({
+                type:'post',
+                dataType: 'script',
+                url: $('#edit_practice_dialog #practice_info form').attr('action'),
+                data: $('#edit_practice_dialog #practice_info form').serialize(),
+                success: function(data, textStatus, XMLHttpRequest) {
+                    $('#edit_practice_dialog').dialog('close');
+                }
+              });
+            } else {
+              $.ajax({
+                type:'post',
+                dataType: 'script',
+                url: $('#edit_practice_dialog #play_preferences form').attr('action'),
+                data: $('#edit_practice_dialog #play_preferences form').serialize(),
+                success: function(data, textStatus, XMLHttpRequest) {
+                    $('#edit_practice_dialog').dialog('close');
+                }
+              });
             }
-          });
-        },
-        '<%=t('actions.cancel')%>': function() {
-          $('#play_preferences_dialog').dialog('close');
+          },
+        '<%= t('actions.cancel') %>': function() {
+            $(this).dialog('close');
+          }
         }
-      }
-    });
+      });
+      $('#practice-ui-tab-dialog-close').append($('#edit_practice_dialog').siblings('.ui-dialog-titlebar').children('.ui-dialog-titlebar-close'));
 
     // Initialize quick search
     var qs = $('#q').quicksearch('.techniques-list .technique', {selector: 'h3'});
