show technique time

--- a/app/views/practices/_practice_technique.html.erb
+++ b/app/views/practices/_practice_technique.html.erb
@@ -64,6 +64,7 @@
     <% end %>
     </ul>
   </div>
+  <div class="practice_technique_time ui-corner-all"><%= "%02d" % practice_technique.minutes %>:<%= "%02d" % practice_technique.seconds %></div>
 <% end %>
 
 <%= javascript_tag do %>
